deptool.in: add --log to the merge command to figure out why we're getting   merge commits for what should be a fast-forward update.

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -5093,7 +5093,7 @@ sub pull {
 
     if (@branches > 0) {
         # merge remote branch(s) to local
-        main::runCommand(qw/git merge/, @branches);
+        main::runCommand(qw/git merge --log/, @branches);
     } else {
         # TODO-reviewer: die?
         warn "No remote branches for $current_branch";
