Lots of fixes to get a clean build on FreeBSD-8.2 i386
CMakeConfig.txt: default process statistics on only for Linux

dependencies.txt: add in squeeze dependencies just copied from lenny, add in freebsd minimal
  dependencies.

check-web-sites-bib.sh: remove leading spaces that pop out from freebsd wc -l

CMakeLists.txt: Add FileUtil.hpp and TypeCompat.hpp utility headers

Clock.hpp: rdtsc assembly works on both linux and freebsd.

FileUtil.hpp: factor out getting the nano-second modify time of a file since struct stat differs
  on different OS's.  Moved this code out of DataSeries since it was in there twice.

StatsHistogram.hpp: Just don't include values.h, doesn't seem to be needed and fails on freebsd

TypeCompat.hpp: Type compatibility/#define compatibility between cygwin, linux, freebsd

src/CMakeLists.txt: ProcessStatistics is now conditional

Double.cpp: fpu_control only on linux; fix coding convention

PThread.cpp: Add getNCpus support for freebsd, add errorcheck pthread mutex support for freebsd

StatsQuantile.cpp: [BUGFIX] make sure to initialize lazy(), do not write over the end of the
  all_buffers array.

StringUtil.cpp: The freebsd interpretation of strerror_r

deptool.in: Remove git debugging print, and check for branches dir for finding git repo dirs since
  branches dir does not always exist.  Switch to Package->new syntax which is more likely to work
  for deptool-bootstrap.  Add version determination for freebsd.

dotfiles/setup: validate that the homedir is ok once rather than warning every time.

dotfiles/zsh-buildenv: Merge IP addr determination code from zsh-env-common; redirect away
  stderr since some of the commands don't work on freebsd.

dotfiles/zsh-env-common: Use merged IP addr env var; remove obsolete bits

dotfiles/zshenv: Strip ..* from hostname, freebsd gives fqdn

CMakeLists.txt: use process statistics checks only if we can build with them; process stats test
  is now conditional

atomic_counter.cpp: fix coding convention, Try ev

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(INCLUDE_FILES
 	DebugFlag.hpp
 	Deque.hpp
 	Double.hpp
+        FileUtil.hpp
 	HashFns.hpp
 	HashMap.hpp
 	HashTable.hpp
@@ -48,6 +49,7 @@ SET(INCLUDE_FILES
 	StringUtil.hpp
 	TestUtil.hpp
 	Tuples.hpp
+        TypeCompat.hpp
 )
 
 ################################## CONDITIONAL BITS
