--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,7 +63,6 @@ SET(LIBLINTEL_SOURCES
 	StatsSeriesGroup.cpp
 	StringUtil.cpp
 	${LIBLINTEL_THREAD_SOURCES}
-	unstable/ProcessStatistics.cpp
 )
 
 SET(LINTEL_FEATURES boost)
@@ -144,6 +143,11 @@ ENDIF(BOOST_PROGRAM_OPTIONS_ENABLED)
 IF(PERL_ENABLED)
     LIST(APPEND LINTEL_FEATURES perl)
 ENDIF(PERL_ENABLED)
+
+IF(WITH_PROCESS_STATISTICS)
+    LIST(APPEND LINTEL_FEATURES process-statistics)
+    LIST(APPEND LIBLINTEL_SOURCES unstable/ProcessStatistics.cpp)
+ENDIF(WITH_PROCESS_STATISTICS)
 
 ################################## LIBRARY
 
