--- a/src/deptool.in
+++ b/src/deptool.in
@@ -980,9 +980,9 @@ sub depCheckoutGetGitBranches {
     my $git_repo_dir = gitRepoDir();
     my @repo_dirs;
     find(sub {
-             print "$File::Find::name\n";
              return unless -d "$_/objects";
-             foreach my $subdir (qw!branches hooks info objects objects/pack objects/info refs!) {
+             # branches doesn't always exist
+             foreach my $subdir (qw!hooks info objects objects/pack objects/info refs!) {
                  return unless -d "$File::Find::name/$subdir";
              }
              foreach my $subfile (qw!config description HEAD!) {
@@ -1493,7 +1493,7 @@ sub dbpDoParallelTest {
 
     die "unimplemented no tests" unless @testlist > 0;
 
-    my $children = new Lintel::ProcessManager(auto_kill_on_destroy => 1);
+    my $children = Lintel::ProcessManager->new(auto_kill_on_destroy => 1);
     my $parallelism = $ENV{MAKE_PARALLELISM} || 1;
 
     map { rmtree($_) if -d $_ } qw(Testing/Temporary Testing/Parallel);
@@ -1749,7 +1749,7 @@ sub depBuildParallel {
     @pending = grep ($_->[1] ne 'test', @pending) unless $options->{tests};
 
     my %running;
-    my $children = new Lintel::ProcessManager(auto_kill_on_destroy => 1);
+    my $children = Lintel::ProcessManager->new(auto_kill_on_destroy => 1);
 
     my $prev_pending_size = @pending;
     # Process everything we have to process.
@@ -2320,7 +2320,7 @@ sub mtnServeGeneral {
     }
     runCommand("cat $work_dir/pubkeys/*.pubkey | mtn -d $work_dir/serve.db read");
 
-    my $pm = new Lintel::ProcessManager();
+    my $pm = Lintel::ProcessManager->new();
     my @args = ('mtn', '-d', "$work_dir/serve.db", '--norc', '--rcfile', "$work_dir/serve.rc");
 
     # start push-to process
@@ -2380,7 +2380,7 @@ sub mtnServePushTo {
     symlink("$workdir/keys", "$workdir/dbs/keys")
         or warn "symlink failed: $!";
     readlink("$workdir/dbs/keys") eq "$workdir/keys" or die "?";
-    my $pm = new Lintel::ProcessManager;
+    my $pm = Lintel::ProcessManager->new();
     my $failure_count = 0;
     my $last_heads = '';
     while (1) {
@@ -3778,6 +3778,18 @@ sub operatingSystem {
                 s/\W/_/go; s/\s/_/go;
 		$Cache::operating_system = "suse-unknown-$_";
 	    }
+        } elsif (-f "/etc/freebsd-update.conf") {
+            my $uname = new FileHandle("uname -rs |")
+                or die "Can't run uname -rs for read: $!";
+            $_ = <$uname>;
+            chomp;
+            if (/^FreeBSD (\d+\.\d+)-RELEASE$/o) {
+                $Cache::operating_system = "freebsd-$1";
+            } else {
+                s/^FreeBSD\s+//o;
+                s/\W/_/go; s/\s/_/go;
+                $Cache::operating_system = "freebsd-unknown-$_";
+            }
         } else {
             $Cache::operating_system = "unknown";
         }
@@ -4945,7 +4957,7 @@ sub tryCommit {
     my ($this) = @_;
 
     main::runCommand(qw/git add -u/); # any uncommitted files we want to track should already be added
-    my $pm = new Lintel::ProcessManager();
+    my $pm = Lintel::ProcessManager->new();
 
     my $commit_pid = $pm->fork(cmd => [qw/git commit/, $this->{amend} ? ('--amend') : ()]);
 
