--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ LINTEL_SIMPLE_TEST(byte_buffer)
 LINTEL_SIMPLE_TEST(boyer_moore_horspool)
 LINTEL_SIMPLE_TEST(stlutility)
 LINTEL_SIMPLE_TEST(base64)
+LINTEL_SIMPLE_TEST(interpolation-search)
 
 ################################## SPECIAL TEST PROGRAMS
 
