Make lintel compile on openbsd
CMakeConfig.txt: Hack to make pthread linking work correctly; no idea why it is needed.

README: re-working the readme since it shows up on the github primary page.
  Now with current instructions and less about the history.

Pthread.*: OpenBSD does not have pthread_mutex_timedlock, define & implement.  Also support
  openbsd error checking mutexes.

src/CMakeLists.txt: Require thread support and force linking on openbsd.  Otherwise tests
  don't work.

SimpleMutex.cpp: Fix coding convention

StatsSeriesGroup.cpp: Switch to snprintf (from warning on openbsd, we were fine but it doesn't hurt)

StringUtil.cpp: OpenBSD considers 0xbf printable but not ascii, everything else has isprint \in
  isascii.

deptool.in: Add support for detecting openbsd, and anything that gives a semi-reasonable answer to
  uname -rs.  Add support for processor count detection for openbsd, and use the environment
  variable if specified.  When reading the git configuration, tolerate empty strings.

boyer_moore_horspool.cpp: Implement memmem (stupidly) for openbsd.

hashtable.cpp: Use snprintf to remove openbsd warning.

run-check-test-util.sh: Openbsd prints 'Abort trap ' after an assertion, add to the "good" check

stringutil.cpp: same isprint issue as above.  Improve debugging of one of the tests.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -155,6 +155,16 @@ ADD_LIBRARY(Lintel ${LIBRARY_TYPE} ${LIBLINTEL_SOURCES})
 SET_TARGET_PROPERTIES(Lintel 
     PROPERTIES VERSION ${LINTEL_VERSION} SOVERSION ${LINTEL_ABI_VERSION})
 
+IF ("${HOST_TYPE}" STREQUAL "OpenBSD")
+    # OpenBSD does not have stubs for the lock/unlock operations that link when you don't
+    # enable threading.  Therefore since a bit of lintel relies on those operations we have
+    # to always link with threads.
+    IF (NOT THREADS_ENABLED)
+        FATAL_ERROR("Can not build on OpenBSD without threads")
+    ENDIF (NOT THREADS_ENABLED)
+    TARGET_LINK_LIBRARIES(Lintel ${CMAKE_THREAD_LIBS_INIT})
+ENDIF ("${HOST_TYPE}" STREQUAL "OpenBSD")
+
 ################################## CONDITIONAL LIBRARY
 
 IF(LIBXML2_ENABLED)
