--- a/include/Lintel/PThread.hpp.in
+++ b/include/Lintel/PThread.hpp.in
@@ -28,6 +28,10 @@ extern "C" {
 }
 #endif
 
+#ifdef __OpenBSD__
+int pthread_mutex_timedlock(pthread_mutex_t *mutex, const struct timespec *abs_timeout);
+#endif
+
 /// \brief Misc pthread-related functions
 class PThreadMisc { // should be a namespace if we believe everyone supports those
 public:
