Get Lintel to build on MacOS (10.7).
LintelCMakeUtil.cmake: MacOS needs magic extra library stuff, also move the linker flag setup in
  here since it's related to the shared library rpath stuff.

LintelFind.cmake: Improve debugging and error messages.

Clock.hpp: macos isn't unix, list explicitly so we include sys/time.h, pthread.h

PThread.*: MacOS needs our replacement timedlock, and a faked up version of clock_gettime
  Make a single define to determine if we are trying sysctl to get the # cpus so we only have to
  update it once.

TypeCompat.hpp: Same type compatiblity as freebsd

src/CMakeLists.txt: Remove the linker flag things.

StringUtil.cpp: MacOS like freebsd for strerror

deptool.in: Note that you can specify cmake options when using deptool cmake.  Add determining
  of MacOS version.  MacOS also determines processors like freebsd.

flock.sh: Shorten the sleep time since the kill only takes out the flock not the sleep also.
  Recent versions of ctest will wait for the sleep to finish.

--- a/include/Lintel/PThread.hpp.in
+++ b/include/Lintel/PThread.hpp.in
@@ -28,8 +28,12 @@ extern "C" {
 }
 #endif
 
-#ifdef __OpenBSD__
+#if defined(__OpenBSD__) || defined(__APPLE_CC__)
 int pthread_mutex_timedlock(pthread_mutex_t *mutex, const struct timespec *abs_timeout);
+#endif
+#if defined(__APPLE_CC__)
+#define CLOCK_REALTIME 12345
+int clock_gettime(int how, struct timespec *into);
 #endif
 
 /// \brief Misc pthread-related functions
